<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dip"
		android:layout_marginBottom="40dip"
		android:gravity="center"
	    >
	    <ImageView
	    	android:id="@+id/icon"
	    	android:src="@drawable/icon"
	    	android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	    	/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#fff"
			android:textSize="35dp"
			android:gravity="center"
			android:text="@string/app_name"
			android:layout_alignParentRight="true"
			android:layout_alignLeft="@id/icon"
			android:layout_marginLeft="35dp"
			/>
	</RelativeLayout>
	<Button
		android:text="@string/play"
		android:id="@+id/play"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="play"
		android:layout_marginBottom="10dip"
		/>
	<Button
		android:text="@string/highscore"
		android:id="@+id/highscore"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dip"
		android:enabled="false"
		/>
	<Button
		android:text="@string/exit"
		android:id="@+id/exit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="exit"
		/>
</LinearLayout>
