<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView
		android:text="@string/intro"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="#fff"
		android:textSize="17dp"
		/>
	<EditText
		android:id="@+id/input"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="number"
		/>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
		<Button
			android:text="@string/submit"
			android:id="@+id/submit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:onClick="checkNumber"
			android:layout_weight="1"
			/>
		<Button
			android:text="@string/reset"
			android:id="@+id/reset"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:onClick="reset"
			android:layout_weight="1"
			/>
	</LinearLayout>
	<TextView
		android:id="@+id/result"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="#fff"
		android:textSize="30dp"
		android:gravity="center"
		/>
	<TextView
		android:id="@+id/stats"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="#fff"
		android:textSize="17dp"
		android:gravity="center"
		android:layout_marginBottom="10dip"
		/>
	<Button
		android:text="@string/back"
		android:id="@+id/back"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:onClick="back"
		android:visibility="gone"
		/>
</LinearLayout>
